examples/test/testpolicy2942.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2942
  namespace: namespace73
spec:
  podSelector:
    matchLabels:
      key37: value26
      key9: value48
      key45: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value23
      podSelector:
        matchLabels:
          key1: value40
          key12: value30
